# clip-reproduction

./: .gitignore  pyproject.toml
scripts/: prepare_data.py  run.sh  run_mac.sh
src/clip/: __init__.py  dataset.py  encoders.py  loss.py  model.py  train.py
