[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "clip-reproduction"
version = "0.1.0"
description = "CLIP (Contrastive Language-Image Pre-training) from scratch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "tiktoken>=0.5",
    "tqdm>=4.65",
    "pillow>=10.0",
    "tensorboard>=2.13",
    "datasets>=2.14",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]
wandb = ["wandb>=0.16"]
